--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "humps": "^2.0.1",
     "knex": "^0.14.2",
     "path": "^0.12.7",
+    "pg": "^7.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
@@ -19,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "knex": "knex"
   }
 }
