--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "pg": "^7.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
     "yarn": "^1.3.2"
   },
   "scripts": {
